tests/snapshots/examples_fixtures/RuntimeBoundaries__Predicates.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/RuntimeBoundaries/Predicates.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `RuntimeBoundaries.Predicates` doesn't match file path `examples/RuntimeBoundaries/Predicates.flx`.

  examples/RuntimeBoundaries/Predicates.flx:1:1
  |
1 | module RuntimeBoundaries.Predicates {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
